<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_filter">Filter</string>
    <string name="pref_popular_value">popular</string>
    <string name="pref_top_rated_value">top_rated</string>
    <string name="pref_sort_order_key">sort_order</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="overview">Overview</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>
